--- a/w8/i/inde.html
+++ b/w8/i/inde.html
@@ -75,3 +75,8 @@
         </div>
     </body>
 </html>
+
+
+<!-- 
+    addEventListener() e usado para anexar um manipulador de eventos a um elemento especifico 
+ -->
